--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,86 +1,6 @@
 spring:
    application:
       name: JmusclesEventProducer
-   rabbitmq:
-      addresses: localhost:5672
-      username: guest
-      password: guest
-    
- #--profile group/include are adding files from class path but not from confihg server, please pass it from run arguments
-  #profiles:
-    #group:
-      #docker-local: rabbitmq-setup-local,executors-local,producer-local
-      #local: rabbitmq-setup-local,executors-local,producer-local
-      #dev: rabbitmq-setup-dev,executors-dev,producer-dev,datasource-dev
-      #prod: rabbitmq-setup-prod,executors-prod,producer-prod,datasource-prod  
-async-producer-config:
-   activeProducersInOrder: 
-      - rabbitmq
-      - syncProcessing
-   rabbitmq: 
-      defaultRoutingKey: DEMO_QUEUE
-      defaultExchange: EXCHANGE_1
-      nonPersistentDeliveryMode: false
-
-rest-producer-config:
-   getDemoUser:
-      processingConfig:
-         activeProducersInOrder:
-            - rabbitmq
-            - syncProcessing    
-         rabbitmq: 
-            defaultRoutingKey: DEMO_QUEUE
-            defaultExchange: EXCHANGE_1
-            nonPersistentDeliveryMode: false
-      responseConfig:
-         success:
-            status: 200
-            body: "success"
-            headers: 
-               Content-Type:  text/html
-               response-key1: response-value1
-               response-key2: response-value2
-               response-key3: response-value3
-               response-key4: response-value4
-               response-key5: response-value5            
-         failure:
-            status: 500
-            body: "failure"
-            headers: 
-               response-key1: response-error-value1
-               response-key2: response-error-value2
-               response-key3: response-error-value3
-               response-key4: response-error-value4
-               response-key5: response-error-value5            
-
-jmuscles:
-   executors-config:
-      restConfig:
-         connectionTimeout: 10000
-         readTimeout: 10000
-      restCalls:
-         test:
-            url: http://localhost:8080/place/list/IN
-            successCodePatterns:
-               200: null
-         getDemoUser:
-            url: https://gorest.co.in/public/v1/users
-            successCodePatterns:
-               200: null
-         createDemoUser:
-            url: https://gorest.co.in/public/v1/users
-            successCodePatterns:
-               200: null
-               401: null
-      sqlProcedures:
-         demo_proc_1:
-            dskey: null
-            procedure: procedure_name
-            successKey: P_RESP_CODE
-            successValue: '000'
-      sqlQueries:
-         insert_user_testdb:
-            dskey: testdb
-            query: insert into test.user(user_id, first_name, last_name, email, gender) values(:user_id, :first_name, :last_name,
-               :email, :gender);
-            successResponse: null
+logging:
+  pattern:
+    console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - MDC: %mdc %msg%n"
