rest api with configurable response builder

--- a/config/yml/application.yml
+++ b/config/yml/application.yml
@@ -19,6 +19,7 @@ async-producer-config:
 
 rest-producer-config:
    countryInfoService:
+      responseBuilder: SimpleResponseBuilder
       configByHttpMethods:
          POST:
             responseConfig:
