--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,7 @@ server:
 logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - MDC: %mdc %msg%n"
+  level:
+     org.springframework.web.client.RestTemplate: DEBUG
+     com.jmuscles.rest.producer.*: DEBUG
+    
