--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<jasypt.version>1.9.3</jasypt.version>
 
 		<jmuscles-rabbitmq-producer.version>j8sb2713-0.1</jmuscles-rabbitmq-producer.version>
-
+		<jmuscles-rest-producer.version>j8sb2713-0.1</jmuscles-rest-producer.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 		<otel-api.version>1.28.0</otel-api.version>
 		<otel-instrumentation-annotations.version>1.28.0</otel-instrumentation-annotations.version>
@@ -30,7 +30,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.jmuscles.rest.producer.Application</start-class>
+		<start-class>com.jmuscles.rest.Application</start-class>
 	</properties>
 
 	<dependencyManagement>
@@ -48,8 +48,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.jmuscles</groupId>
-			<artifactId>jmuscles-rabbitmq-producer</artifactId>
-			<version>${jmuscles-rabbitmq-producer.version}</version>
+			<artifactId>jmuscles-rest-producer</artifactId>
+			<version>${jmuscles-rest-producer.version}</version>
 		</dependency>
 
 		<dependency>
