--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 spring:
-   application:
-      name: JmusclesEventProducer
-server:
-   port: 8081      
+  application:
+    name: JmusclesRestProducer
 logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - MDC: %mdc %msg%n"
   level:
-     org.springframework.web.client.RestTemplate: DEBUG
-     com.jmuscles.rest.producer.*: DEBUG
-    
+    org.springframework.web.client.RestTemplate: DEBUG
+    com.jmuscles.rest.*: DEBUG
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        
