--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 
 	<groupId>com.jmuscles</groupId>
-	<artifactId>jmuscles-rest-producer-app-j8sb2713</artifactId>
-	<version>1.0</version>
+	<artifactId>jmuscles-rest-producer-app</artifactId>
+	<version>j8sb2713-1.0</version>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -19,8 +19,10 @@
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<jasypt.version>1.9.3</jasypt.version>
 
-		<jmuscles-rabbitmq-producer.version>j8sb2713-0.1</jmuscles-rabbitmq-producer.version>
-		<jmuscles-rest-producer.version>j8sb2713-0.1</jmuscles-rest-producer.version>
+		<jmuscles-post-fix>j8sb2713-0.2</jmuscles-post-fix>
+		<jmuscles-rabbitmq-producer.version>${jmuscles-post-fix}</jmuscles-rabbitmq-producer.version>
+		<jmuscles-rest-producer.version>${jmuscles-post-fix}</jmuscles-rest-producer.version>
+
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 		<otel-api.version>1.28.0</otel-api.version>
 		<otel-instrumentation-annotations.version>1.28.0</otel-instrumentation-annotations.version>
